Changed to only one event listener for the div

--- a/pics.html
+++ b/pics.html
@@ -21,7 +21,7 @@
 <script>
 
 	$(document).ready(function() {
-		$('img').click(function(){
+		$('div').on('click', 'img', function(){
 			$(this).addClass('hide');
 		})
 	});
